--- a/scratches/style.css
+++ b/scratches/style.css
@@ -28,6 +28,12 @@
     font-size: inherit;
 }
 
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 .head_cont {
     padding-left: 147px;
     font-size: 30px;
@@ -89,4 +95,38 @@
     font-family: 'Oswald';
     margin-left: 45px;
     position: absolute;
+}
+
+.bg_Malevich_conteiner {
+    width: 100%;
+    line-height: 553px;
+}
+
+.Malevich_conteiner {
+    max-width: 1176px;
+    height: 267px;
+    margin: auto;
+}
+
+.Malevich {
+    width: 210px;
+    height: 210px;
+    background: black;
+    display: block;
+    float: left;
+}
+
+.Malevich:first-of-type {
+    margin: 32px 14px 24px 146px;
+}
+
+.time2 {
+    font-size: 24px;
+    max-width: 410px;
+    line-height: 80;
+    color: black;
+    font-family: 'Oswald';
+    display: block;
+    float: right;
+
 }
