--- a/scratches/style.css
+++ b/scratches/style.css
@@ -240,33 +240,32 @@
     margin-left: 150px;
 }
 
-.column_table {
+.column_table, .column_time {
     flex-basis: 211.25px;
-
 }
 
-.column_table:first-of-type {
+.column_time {
     font-size: 24px;
     font-family: "Myriad Pro";
 }
 
-.column_table:first-of-type p:first-of-type {
+.column_time p:first-of-type {
     padding-top: 206px;
 }
 
-.column_table:first-of-type p:nth-of-type(2) {
+.column_time p:nth-of-type(2) {
     padding-top: 282px;
 }
 
-.column_table:first-of-type p:nth-of-type(3) {
+.column_time p:nth-of-type(3) {
     padding-top: 314px;
 }
 
-.column_table:first-of-type p:nth-of-type(4) {
+.column_time p:nth-of-type(4) {
     padding-top: 306px;
 }
 
-.column_table:first-of-type p:last-of-type {
+.column_time p:last-of-type {
     padding-top: 309px;
 }
 
@@ -275,4 +274,50 @@
     padding-right: 71px;
     font-size: 24px;
     font-family: "Myriad Pro";
+}
+
+.column_table h4 {
+    font-size: 24px;
+    font-family: "Oswald";
+    padding-bottom: 15px;
+}
+
+.column_table:nth-of-type(2) h4:nth-of-type(2) {
+    padding-right: 50px;
+}
+
+.column_table:nth-of-type(3) h4:nth-of-type(3), h4:nth-of-type(4) {
+    padding-right: 60px;
+}
+
+.column_table:last-of-type h4:nth-of-type(3), h4:last-of-type {
+    padding-right: 55px;
+}
+
+.column_table:nth-of-type(2) h4:nth-of-type(4) {
+    padding-bottom: 0;
+}
+
+.column_table p:first-of-type {
+    font-size: 16px;
+    font-family: "Oswald-Light";
+}
+
+.column_table p:nth-of-type(2) {
+    font-family: "Oswald";
+    font-size: 16px;
+    padding-bottom: 23px;
+}
+
+.column_table img {
+    padding-bottom: 25px;
+}
+
+.column_table p {
+    font-size: 18px;
+    font-family: "Oswald-Light";
+}
+
+.column_table p:nth-of-type(3) {
+    padding-bottom: 40px;
 }
